async-coap-uri/proc-macros/tests/ui/assert_rel_ref_literal/invalid_literal.stderr
error: expected string literal, found int
 --> $DIR/invalid_literal.rs:7:29
  |
7 |     assert_rel_ref_literal!(123);
  |                             ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
